ghc-4335c07/testsuite/tests/typecheck/should_fail/T2994.stderr

T2994.hs:11:10: error:
    • Expecting one more argument to ‘MonadReader Int’
      Expected a constraint,
        but ‘MonadReader Int’ has kind ‘* -> Constraint’
    • In the instance declaration for ‘MonadReader Int’

T2994.hs:13:10: error:
    • Expecting one more argument to ‘MonadReader (Reader' r)’
      Expected a constraint,
        but ‘MonadReader (Reader' r)’ has kind ‘* -> Constraint’
    • In the instance declaration for ‘MonadReader (Reader' r)’

T2994.hs:13:23: error:
    • Expecting one more argument to ‘Reader' r’
      Expected a type, but ‘Reader' r’ has kind ‘* -> *’
    • In the first argument of ‘MonadReader’, namely ‘(Reader' r)’
      In the instance declaration for ‘MonadReader (Reader' r)’

T2994.hs:15:10: error:
    • Expected kind ‘(* -> *) -> Constraint’,
        but ‘MonadReader r r’ has kind ‘Constraint’
    • In the instance declaration for ‘MonadReader r r (Reader' r)’
